--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -1,7 +1,13 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-image: url('./sw-bg.jpg');
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  background-color: #000;
+  background-image: linear-gradient(to bottom right, rgba(38, 37, 37, 0.4), rgba(158, 79, 96, 0.5)), url('./sw-bg.jpg');
   background-size: cover;
+  background-attachment: fixed;
 }
