--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -8,6 +8,29 @@
   background-image: url(./STARWARS.png);
 }
 
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-btn {
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+  background-color: #282727;
+  border: 3px solid #9e4f60;
+  color: #ddd;
+  font-size: 1.5rem;
+  border-radius: 5px;
+}
+
+.page-btn:hover {
+  background-color: #9e4f60;
+  border: 3px solid #282727;
+  color: #282727;
+}
+
 .card-container {
   width: 100%;
   display: flex;
